# imodels-evolve

./: .gitignore  all_scores.json  interpretability.md  interpretability.py  interpretability_results.md  interpretable_regressor.py  model.py  program.md  pyproject.toml  readme.md  run_all.py  run_baselines.py
.claude/: settings.local.json
cached_evolved_libs/apr10-codex/: interpretability_results.csv  overall_results.csv  performance_results.csv
cached_evolved_libs/apr12-codex/: interpretability_results.csv  overall_results.csv  performance_results.csv
e2e_experiments/: 00_blade_setup.md  03_copilot_cli_rerun.md
e2e_experiments/blade-evaluation-claude-stability/: evaluate.py  prepare_run.py  run_all.sh
eval/: interp_eval.py  interpretability_goals.md  performance.py
evolve/: interpretable_regressor.py  program.md
evolve-codex/: interpretable_regressor.py  program.md  run_loop.sh
evolve_codex/: interpretable_regressor.py  readme.md  run_baselines.py  src
generalization_experiments/: 01_eval_generalization_with_new_model.md  evaluate_multi_seed.py  evaluate_new_generalization.py  evaluate_new_generalization_gpt_5_4.py  run_two_new_tests.py
interpretability/: interpretability.py  run_all.py
result_libs/: combined_results.csv  non_dominated_evolved.csv  pareto_evolved.csv
result_libs_processed/: build_combined_results.py  build_library.py  program.md  select_models.py
result_libs_processed/agentic-imodels/: README.md  SKILL.md  pyproject.toml  smoke_test.py
results/: overall_results.csv
src/: interp_eval.py  performance_eval.py  visualize.py
(+1343 files in other folders)
