[project]
name = "imodels-evolve"
version = "0.1.0"
description = "Autonomous research on interpretable scikit-learn classifiers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.25.3",
    "datasets>=4.8.3",
    "imodelsx>=1.0.13",
    "matplotlib>=3.10.0",
    "numpy>=1.24.0",
    "openai>=2.29.0",
    "openml>=0.14.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pygam>=0.12.0",
    "scikit-learn>=1.3.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
