[project]
name = "agentic-imodels"
version = "0.1.0"
description = "Interpretable tabular regressors discovered by agentic loops (Claude Code / OpenAI Codex)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "agentic-imodels contributors" },
]
license = { text = "MIT" }
keywords = [
    "interpretable-ml",
    "tabular",
    "regression",
    "scikit-learn",
    "gam",
    "ebm",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "interpret>=0.6",
]

[project.optional-dependencies]
dev = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.8",
    "pandas>=2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_imodels"]
